app/Resources/public/css/scorm.css
/* ... */
.total{
  width: 100%;
}
.view-options{
    padding-top: 3px;
    margin-right: 5px;
}
.panel-default .panel-heading .btn{
  top: -25px;
}
.panel-default .panel-heading .dropdown-menu{
  top: 30%;
}
#content-scorm .breadcrumb{
  padding: 5px;
}
.scorm-heading{
  font-size: 14px;
  padding-top: 5px;
  padding-bottom: 5px;
}
#control-bottom{
  position: fixed;
  bottom: 0;
  width: 100%;
  text-align: center;
  left: 0;
}
#control-bottom.well{
  margin-bottom: 0;
}
/*SCORM CSS BASE */
#learning_path_left_zone .home{
  display: inline-block;
  width: 94%;
  margin-bottom: .5em;
  margin-top: .5em;
  font-size: 12px;
}

/* for section */
.scorm_item_section{
    border-bottom: 1px solid #DDD;
    font-size: 12px;
    font-weight: bold;
}
.scorm_item_section .section{
    background:url("../../main/img/scorm/folder-item-closed.png") no-repeat 10px center;
    padding: 10px 20px 10px 35px;
}
.scorm_item_section.scorm_completed .section{
  background:url("../../main/img/scorm/folder-item-open.png") no-repeat 10px center;
  padding-right: 1.5em;
}
.scorm_item_normal a.items-list{
  color: #666666;
  font-size: 12px;
}
.scorm_item_normal a:hover{
   text-decoration: none;
}
.scorm_item_normal.scorm_completed{
   background-color: #F5F5F5;
}
.scorm_item_section.scorm_completed{
   background-color: #F5F5F5;
   color: #000;
}
.scorm_completed .item {
  background:url("../../main/img/scorm/scorm_completed.png") no-repeat 10px center;
}
.scorm_completed .item a{
  color: #000;
}
.scorm_failed .item{
  background:url("../../main/img/scorm/scorm_failed.png") no-repeat 10px center;
}
.scorm_not_attempted .item{
  background:url("../../main/img/scorm/scorm_not_attempted.png") no-repeat 10px center;	
}
.scorm_highlight .item{
  background:url("../../main/img/scorm/scorm_highlight.png") no-repeat 10px center !important;
  color: #009AB8;
}
.scorm_highlight.scorm_completed .item{
  background:url("../../main/img/scorm/scorm_current.png") no-repeat 10px center !important;
}
.scorm_highlight.scorm_failed .item{
    background:url("../../main/img/scorm/scorm_failed.png") no-repeat 10px center !important;
}
.scorm_highlight a{
  color: #FFFFFF !important;
}
.scorm_item_normal.scorm_highlight{
    background-color: #00829C;
}
/* END SCORM CSS BASE*/
#scorm-info{
    padding: 0;
    background-color: #EBF3F5;
}
#scorm-info .description-autor p {
    font-size: 12px;
    line-height: 20px;
    color: #666666;
}
#scorm-info hr {
    width: 100%;
    border-top: 1px solid #d7d7d7;
    margin-top: 5px;
    margin-bottom: 10px;
}
#scorm-info #progress_bar .progress{
    margin-bottom: 5px;
}
.image-avatar .media-left img,
.image-avatar img{
    border: 1px solid #DDD;
    border-radius: 5px;
}
.image-avatar{
    padding-top: 10px;
    padding-bottom: 10px;
}
.scorm-title{
    padding: 20px 10px;
}
.scorm-title h4{
    font-size: 20px;
    font-weight: bold;
    color: #686f7a;
}
#learning_path_right_zone .lp-view-tabs li a {
    padding: 5px 10px;
}
#learning_path_main {
    height: 100%;
    margin: 0;
    overflow: hidden;
    position: absolute;
    width: 100%;
}
#learning_path_left_zone,
#learning_path_right_zone {
    bottom: 0;
    box-sizing: content-box;
    left: 0;
    margin: 0;
    padding: 0;
    position: absolute;
    right: 0;
    top: 0;
    transition-property: left, width;
    transition-duration: 0.5s;
}
#learning_path_right_zone #wrapper-iframe {
    height: 100%;
    width: 100%;
}
#learning_path_left_zone .lp-view-zone-container,
#learning_path_right_zone .lp-view-zone-container {
    bottom: 0;
    left: 0;
    padding: 0;
    position: absolute;
    right: 0;
    top: 0;
}
#learning_path_toc {
    bottom: 0;
    left: 0;
    overflow: auto;
    position: absolute;
    right: 0;
    top: 100%;
    transition-property: top;
    transition-duration: 0.1s;
}
#learning_path_right_zone {
    left: 100%;
    width: 100%;
}
#learning_path_right_zone.no-right-col {
    left: 0;
}
#learning_path_right_zone .lp-view-tabs .tab-content {
    bottom: 5px;
    left: 5px;
    position: absolute;
    right: 5px;
    top: 60px;
}
#learning_path_right_zone .tab-pane{
    height: 100%;
    position: relative;
}
#learning_path_right_zone .tab-pane iframe {
    border: 0 none;
    height: 100%;
    width: 100%;
}
#learning_path_main.lp-view-collapsed #learning_path_left_zone {
    left: -100%;
}
#learning_path_main.lp-view-collapsed #learning_path_right_zone {
    left: 0;
    width: 100%;
}
.nav-tabs li.active a{
    color: #006A84;
}
.nav-tabs li a{
    color: #666666;
}
#lp-view-expand-button{
    border: none;
    background: none;
    padding: 0;
    margin: 0;
}
.icon-toolbar .fa{
    width: 35px;
    height: 35px;
    line-height: 35px;
    text-align: center;
    border-radius: 100%;
    background-color: #34495E;
    font-size: 20px;
    color: #FFF;
}
.icon-toolbar .fa:hover{
    background-color: #000;
}
.expand .fa{
    background-color: #00829C;
}
.expand .fa:hover{
    background-color: #006A84;
    color: #ffffff;
}
.expand .fa:active, .expand .fa:focus{
    color: #ffffff;
}
#scorm-info .progress-bar{
    line-height: 17px;
}
.actions_lp{
    display: inline-block;
    width: 100%;
    text-align: center;
}
.navegation-bar {
    display: block;
    padding: 5px 10px 5px 5px;
    right: 0;
    top: 0;
    position: absolute;
    z-index: 9999;
}
/* LP VIEW COLLAPSE */
.scorm-collapse .panel:hover{
    box-shadow: 0 3px 1px 0 rgba(20,23,28,.1);
}
.scorm-collapse .panel-default .panel-heading{
    background: url(../../../../main/img/icons/svg/arrow-down.svg)  #FFF right center no-repeat;
    padding-top: 0;
    padding-bottom: 0;
}
.scorm-collapse a.item-header{
    padding-bottom: 4px;
    padding-top: 10px;
}
.scorm-collapse .panel-default .panel-heading h4{
    font-size: 18px;
    font-weight: 600;
}
.scorm-collapse a{
    color: #686f7a;
}
.scorm-collapse a.item-action,
.scorm-collapse a.item-header{
    width: 100%;
    display: inline-block;
}
.scorm-collapse .panel-body{
    padding: 0;
}
/* ... */

